--- a/php.ini
+++ b/php.ini
@@ -403,7 +403,7 @@ max_input_time = 180
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 256M
+memory_limit = 1024M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -946,6 +946,7 @@ default_socket_timeout = 60
 ;extension=tidy
 ;extension=xmlrpc
 ;extension=xsl
+extension=mailparse
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
