--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,10 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
+    proxy_buffer_size 16k;
+    proxy_busy_buffers_size 24k;
+    proxy_buffers 64 4k;
+
     fastcgi_read_timeout 600s;
     sendfile        on;
     #tcp_nopush     on;
